# agreeing-llms

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
configs/: experiment.yaml
data/: DATASET_README.md  build_combined_dataset.py  combined.jsonl
paper-v1/: FINDINGS.md  LIMITATIONS.md  README.md
paper-v1/analysis/: 00_parser_correction.md  01_headline_rho.md  02_kimi_confound.md  03_overconfidence_gap.md  04_crossculture_finding.md  05_committee_selection.md
paper-v1/committee-selection/: calibration_by_committee.csv  committees.csv  report.md  selection_eval.json
paper-v1/config/: experiment.yaml
paper-v1/dataset/: DATASET_README.md  combined.jsonl.md5
paper-v1/paper/: draft.md  gen_coauthor_briefing.py
paper-v1/raw/: errors.parquet  progress.json  report.md  rho_by_domain.json
rho_collapse/: __init__.py  agents.py  cli.py  committee.py  committee_analysis.py  loader.py  rate_limit.py  report.py  rho.py  runner.py  scorer.py  semantic_parser.py
tests/: test_committee.py  test_committee_analysis.py  test_config.py  test_loader.py  test_rate_limit.py  test_rho.py  test_scorer.py  test_semantic_parser.py
