[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "rho-collapse"
version = "0.1.0"
description = "Measure inter-agent error correlation in multi-agent LLM committees."
requires-python = ">=3.10"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "numpy>=1.24",
    "pandas>=2.0",
    "pyarrow>=14.0",
    "tqdm>=4.66",
    # LLM SDKs (all optional at runtime — code degrades if a key is absent)
    "anthropic>=0.40",
    "openai>=1.50",
    "google-genai>=0.3",
    "together>=1.3",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "pytest-mock>=3.12"]

[project.scripts]
rho-collapse = "rho_collapse.cli:main"

[tool.setuptools.packages.find]
include = ["rho_collapse*"]
